1998-12-14  Mike Grupenhoff <kashmir@munge.com>

	* server-src/changer.c (changer_label): make it return void
	to keep gcc warning about control reaching the end of a nonvoid
	function.
	* server-src/changer.c: update changer_label's proto for previous

1998-12-14  Mike Grupenhoff <kashmir@munge.com>

	* common-src/amanda.h: define SET, CLR, ISSET macros for dealing
	with bitmasks
	* server-src/amadmin.c: use the bitmask macros for setting
	and clearing the bits in the infofile command word
	* server-src/planner.c: ditto.  This fixes a bug in the code that
	tried to clear FORCE_FULL with an xor expression that was
	never assigned (x ^ FORCE_FULL)

1998-12-14  Mike Grupenhoff <kashmir@munge.com>

	* common-src/bsd-security.c (bsd_sendpkt): cast uid's to long and
	use %ld to print them.

1998-12-14  Mike Grupenhoff <kashmir@munge.com>

	* common-src/dgram.h: mark dgram_cat with gcc's printf attribute
	* common-src/packet.h: ditto for pkt_cat
	* common-src/security.h: likewise for security_seterror

1998-12-14  Mike Grupenhoff <kashmir@munge.com>

	* common-src/error.c (error): const the format arg
	* common-src/amanda.h: mark error with gcc's noreturn attribute, and
	const its format arg

1998-12-14  Mike Grupenhoff <kashmir@munge.com>

	* common-src/debug.c (debug_printf): const the format arg
	* common-src/amanda.h: const debug_printf's format arg

1998-12-14  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* configure.in (BSD SCSI): test ... -a ... is not portable, and less 
	so when written test ... -a test ... :-)

1998-12-14  Thomas Hepper <th@icem.de>

	* changer-src/Makefile.am Added scsi-bsd.c
	* changer-src/chg-scsi.c Initialize *scsitapedevice
	* changer-src/scsi-changer-driver.c remove LITTLE_ENDIAN_BITFILEDS
	defenition
	changed RequestSense to pRequestSense (there is a function 
	called RequestSense)
	changed error handling in ResetStatus (fix for IRIX)
	FIxed length handling for the pages in ReadElemtStatus